# django-staticsite

./: .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml
staticsite/: __init__.py  apps.py  errors.py  publish.py  publisher.py  renderer.py  request.py  static.py  urls.py  utils.py
staticsite/backends/: amazon_s3.py  google_storage.py  microsoft_azure_storage.py
staticsite/management/commands/: staticsite.py
staticsite/publishers/: amazon_s3.py  google_storage.py  microsoft_azure_storage.py
tests/: i18n_urls.py  namespaced_sub_urls.py  namespaced_urls.py  no_namespaced_urls.py  settings.py  test_commands.py  test_publishing.py  test_redirects.py  test_renderer.py  test_static.py  urls.py
