[project]
name = "django-staticsite"
version = "0.1.0"
description = "Reference implementation of a staticsite contrib module for Django"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[project.optional-dependencies]
amazon_s3 = [
  "boto3>=1.40.68"
]
google_storage = [
    "google-cloud-storage>=3.5.0",
]
microsoft_azure_storage = [
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.1",
]
